added  footer and navbar

--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,17 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WanderLust</title>
-</head>
+<% layout("/layouts/boilerplate") %>
 <body>
     <h3>All listings</h3>
-    <form action="/listings/new" method="get">
+    <!-- <form action="/listings/new" method="get">
         <Button>
             Create New listing
         </Button>
-    </form>
+    </form> -->
     <ul>
         <%for(let listing of allListings){%>
             <li><a href="/listings/<%=listing._id%>"><%= listing.title %></a></li>
@@ -19,4 +13,3 @@
         <%}%>
     </ul>
 </body>
-</html>
