--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,8 @@
 /* navbar */
+body{
+
+    font-family: "Plus Jakarta Sans", sans-serif !important;
+}
 .navbar{
     height: 5rem;
     background-color: white;
@@ -47,4 +51,30 @@
     align-items: space-between;
 
 
+}
+
+/* cards */
+
+.card{
+    border:none !important;
+    margin-bottom: 2rem;
+    
+}
+
+.card-img-top{
+    border-radius: 1rem !important;
+    width: 100% !important;
+    object-fit: cover !important; 
+}
+
+.card-body{
+    padding: 0px !important;
+
+}
+.card-text p{
+    font-weight: 400 !important ;
+}
+
+.listing-link{
+    text-decoration: none;
 }
