--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,19 +1,40 @@
 <% layout("/layouts/boilerplate.ejs") %>
 <body>
+    <br><br>
+    <div class="row">
+        <div class="col-8 offset-2">
     <h3>Edit your Listing</h3>
     <form method="post" action="/listings/<%=listing._id%>?_method=PUT" >
-        <input name="listing[title]" value="<%=listing.title%>">
+        <div class="mb-3">
+            <label for="title" class="form-label">Title</label>
+            <input name="listing[title]" value="<%=listing.title%>" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label for="description" class="form-label">Description</label>
+            <textarea name="listing[description]" class="form-control"><%=listing.description%></textarea> 
+        </div>
+       <div class="mb-3">
+        <label for="image" class="form-label">Image</label>
+        <input name="listing[image]" value="<%=listing.image%>" class="form-control">
+        </div>
+        <div class="row">
+        <div class="mb-3 col-md-4">
+            <label for="price" class="form-label">Price</label>
+            <input name="listing[price]" value="<%=listing.price%>" type="number" class="form-control">
+        </div>
+        <div class="mb-3 col-md-8">
+            <label for="country" class="form-label">Country</label>
+            <input name="listing[country]" class="form-control" value="<%=listing.country%>">
+        </div>
+    </div>
+        <div class="mb-3">
+            <label for="location" class="form-label">Location</label>
+            <input name="listing[location]"class="form-control" value="<%=listing.location%>">
+        </div>
+        
+        <button class="btn btn-save mt-3">Edit</button>
        <br><br>
-       <textarea name="listing[description]" ><%=listing.description%></textarea> 
-       <br><br>
-       <input name="listing[image]" value="<%=listing.image%>">
-       <br><br>
-       <input name="listing[price]" value="<%=listing.price%>" type="number">
-       <br><br>
-       <input name="listing[location]" value="<%=listing.location%>">
-       <br><br>
-       <input name="listing[country]" value="<%=listing.country%>">
-       <br><br>
-       <button>Save</button>
     </form>
+</div>
+</div>
 </body>
