--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,20 +1,44 @@
 <% layout("/layouts/boilerplate.ejs") %>
 <body>
-    <h3>Create a new Listing</h3>
-    <form method="post" action="/listings">
-        <input name="listing[title]" placeholder="Enter title">
-       <br><br>
-       <textarea name="listing[description]" placeholder="Enter description"></textarea> 
-       <br><br>
-       <input name="listing[image]" placeholder="enter image URL/Link">
-       <br><br>
-       <input name="listing[price]" placeholder="Enter price" type="number">
-       <br><br>
-       <input name="listing[location]" placeholder="Enter location">
-       <br><br>
-       <input name="listing[country]" placeholder="Enter country">
-       <br><br>
-       <button>Add</button>
-    </form>
+    <br><br>
+    <div class="row ">
+        <div class="col-8 offset-2">
+      
+            
+    <h3 >Create a new Listing</h3>
     
+    <form method="post" action="/listings">
+    <div class="mb-3">
+        <label for="title" class="form-label">Title</label>
+        <input name="listing[title]" placeholder="Add a catchy title" class="form-control">
+    </div>
+       
+       <div class="mb-3">
+        <label for="description" class="form-label">Description</label><br>
+        <textarea name="listing[description]" placeholder="Enter description" class="form-control"></textarea> 
+       </div>
+       
+       <div class="mb-3">
+        <label for="image" class="form-label">Image</label>
+        <input name="listing[image]" placeholder="enter image URL/Link" class="form-control">
+       </div>
+       <div class="row">
+       <div class="mb-3 col-md-4">
+        <label for="price" class="form-label">Price</label>
+        <input name="listing[price]" placeholder="1200" type="number" class="form-control">
+       </div>
+       <div class="mb-3 col-md-8">
+        <label for="country" class="form-label">Country</label>
+        <input name="listing[country]" placeholder="India" class="form-control">
+       </div>
+    </div>
+       <div class="mb-3">
+        <label for="location" class="form-label">Location</label>
+        <input name="listing[location]" placeholder="Jaipur, Rajasthan" class="form-control">
+       </div>
+       <button class="btn btn-dark add-btn">Add</button>
+       <br><br><br>
+    </form>
+</div>
+</div>
 </body>
