--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -4,32 +4,36 @@
     <div class="row">
         <div class="col-8 offset-2">
     <h3>Edit your Listing</h3>
-    <form method="post" action="/listings/<%=listing._id%>?_method=PUT" >
+    <form method="post" action="/listings/<%=listing._id%>?_method=PUT" novalidate class="needs-validation">
         <div class="mb-3">
             <label for="title" class="form-label">Title</label>
-            <input name="listing[title]" value="<%=listing.title%>" class="form-control">
+            <input name="listing[title]" value="<%=listing.title%>" class="form-control" required>
+            <div class="valid-feedback">Title looks good!</div>
+            
         </div>
         <div class="mb-3">
             <label for="description" class="form-label">Description</label>
-            <textarea name="listing[description]" class="form-control"><%=listing.description%></textarea> 
+            <textarea name="listing[description]" class="form-control" required><%=listing.description%></textarea> 
+            <div class="invalid-feedback">Please enter a short description</div>
         </div>
        <div class="mb-3">
         <label for="image" class="form-label">Image</label>
-        <input name="listing[image]" value="<%=listing.image%>" class="form-control">
+        <input name="listing[image]" value="<%=listing.image%>" class="form-control" required>
+        
         </div>
         <div class="row">
         <div class="mb-3 col-md-4">
             <label for="price" class="form-label">Price</label>
-            <input name="listing[price]" value="<%=listing.price%>" type="number" class="form-control">
+            <input name="listing[price]" value="<%=listing.price%>" type="number" class="form-control" required>
         </div>
         <div class="mb-3 col-md-8">
             <label for="country" class="form-label">Country</label>
-            <input name="listing[country]" class="form-control" value="<%=listing.country%>">
+            <input name="listing[country]" class="form-control" value="<%=listing.country%>" required>
         </div>
     </div>
         <div class="mb-3">
             <label for="location" class="form-label">Location</label>
-            <input name="listing[location]"class="form-control" value="<%=listing.location%>">
+            <input name="listing[location]"class="form-control" value="<%=listing.location%>" required>
         </div>
         
         <button class="btn btn-save mt-3">Edit</button>
