--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,5 +1,10 @@
 <% layout("/layouts/boilerplate") %>
 
-<div class="alert alert-danger col-6 offset-3" role="alert">
-  A simple danger alert—check it out!
+<div class="row">
+  <div class="alert alert-danger col-6 offset-3 mt-3" role="alert">
+    <!-- <svg class="bi flex-shrink-0 me-2" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg> -->
+    <h4 class="alert-heading"><%= err.message %></h4>
+  
+  </div>
+
 </div>
