--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -11,6 +11,17 @@
           <a class="nav-link" href="/listings/new">Add new listing</a>
           
         </div>
-      </div>
+        <!-- <div class="collapse navbar-collapse" id="navbarNavAltMarkup"> -->
+          <div class="navbar-nav ms-auto">
+            <% if(!currUser) {%>
+            <a class="nav-link"  href="/signup">signup</a>
+            <a class="nav-link" href="/login">login</a>
+            <% } %>
+            <% if(currUser) {%>
+            <a class="nav-link" href="/logout">logout</a>
+            <% } %>
+            
+          </div>
+      <!-- </div> -->
     </div>
   </nav>
