--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,53 +1,63 @@
 /* navbar */
-body{
+body {
 
     font-family: "Plus Jakarta Sans", sans-serif !important;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
 }
-.container{
+
+.container {
     flex: 1;
 }
-.navbar{
+
+.navbar {
     height: 5rem;
     background-color: white;
 
 }
-.fa-compass{
-    color:#fe424d;
-    font-size:2rem;
+
+.fa-compass {
+    color: #fe424d;
+    font-size: 2rem;
 
 }
-.nav-link{
-    color:#222222 !important;
+
+.nav-link {
+    color: #222222 !important;
 }
-.f-info-links a{
+
+.f-info-links a {
     text-decoration: none;
     color: #222222;
 }
 
-.f-info-links a:hover{
+.f-info-links a:hover {
     text-decoration: underline;
     color: #222222;
 }
-.f-info-links{
-    width: 100%;
-    display: flex;
-    align-items: center;justify-content: center;
-}
-.f-info-socials,.f-info-brand{
+
+.f-info-links {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.f-info-socials i{
+.f-info-socials,
+.f-info-brand {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.f-info-socials i {
     font-size: 1.2rem;
     margin-right: 1rem;
 }
-.f-info{
+
+.f-info {
     text-align: center;
     display: flex;
     height: 8rem;
@@ -61,57 +71,67 @@ body{
 
 /* cards */
 
-.listing-card{
-    border:none !important;
+.listing-card {
+    border: none !important;
     margin-bottom: 2rem;
-    
+
 }
 
-.card-img-top{
+.card-img-top {
     border-radius: 1rem !important;
     width: 100% !important;
-    object-fit: cover !important; 
+    object-fit: cover !important;
 }
 
-.card-body{
+.card-body {
     padding: 0px !important;
 
 }
-.card-text p{
-    font-weight: 400 !important ;
+
+.card-text p {
+    font-weight: 400 !important;
 }
 
-.listing-link{
+.listing-link {
     text-decoration: none;
 }
 
 /* cardeffect */
 
-.card-img-overlay{
+.card-img-overlay {
     opacity: 0;
 }
 
-.card-img-overlay:hover{
+.card-img-overlay:hover {
     opacity: 0.2;
-    background-color: white !important;;
+    background-color: white !important;
+    ;
 }
 
-.add-btn,.btn-save,.edit-btn{
+.add-btn,
+.btn-save,
+.edit-btn {
     background-color: #fe424d !important;
     border: none !important;
 }
 
-.show-img{
+.show-img {
     height: 30vh;
-  
-    
+
+
 }
 
-.btns{
+.btns {
     display: flex;
 
 }
-.show-card{
+
+.show-card {
     padding-left: 0;
     padding-right: 0;
+}
+
+#map {
+    height: 400px;
+    width: 90vh;
 }
