--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -8,29 +8,31 @@
 
                 <h3>Create a new Listing</h3>
 
-                <form method="post" action="/listings" novalidate class="needs-validation">
+                <form method="post" action="/listings" novalidate class="needs-validation"
+                    enctype="multipart/form-data">
                     <div class="mb-3">
                         <label for="title" class="form-label">Title</label>
                         <input name="listing[title]" placeholder="Add a catchy title" class="form-control" required>
                         <div class="valid-feedback">Title looks good!</div>
-                        
+
                     </div>
 
                     <div class="mb-3">
                         <label for="description" class="form-label">Description</label><br>
-                        <textarea name="listing[description]" placeholder="Enter description"
-                            class="form-control" required></textarea>
-                            <div class="invalid-feedback">Please enter a short description</div>
+                        <textarea name="listing[description]" placeholder="Enter description" class="form-control"
+                            required></textarea>
+                        <div class="invalid-feedback">Please enter a short description</div>
                     </div>
 
+
                     <div class="mb-3">
-                        <label for="image" class="form-label">Image</label>
-                        <input name="listing[image]" placeholder="enter image URL/Link" class="form-control">
+                        <label for="image" class="form-label">Upload Listing Image</label>
+                        <input name="listing[image]" class="form-control" type="file" required>
                     </div>
                     <div class="row">
                         <div class="mb-3 col-md-4">
                             <label for="price" class="form-label">Price</label>
-                            <input name="listing[price]" placeholder="1200"  class="form-control" required>
+                            <input name="listing[price]" placeholder="1200" class="form-control" required>
                             <div class="invalid-feedback">Please enter a valid price</div>
                         </div>
                         <div class="mb-3 col-md-8">
@@ -50,6 +52,3 @@
             </div>
         </div>
     </body>
-    
-     
-    
